Renomeando por consistencia

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,5 @@ set(CMAKE_C_STANDARD 11)
 
 include_directories(include)
 
-add_executable(trabalho src/main.c
+add_executable(trabalho_compiladores src/main.c
         src/lexer.c)
