Alterando a função main para aceitar um caminho de arquivo como argumento

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(trabalho C)
 
 set(CMAKE_C_STANDARD 11)
 
+configure_file(${CMAKE_SOURCE_DIR}/codigo.txt ${CMAKE_BINARY_DIR}/codigo.txt COPYONLY)
+
 include_directories(include)
 
 add_executable(trabalho_compiladores src/main.c
