--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(trabalho C)
 
 set(CMAKE_C_STANDARD 11)
 
-configure_file(${CMAKE_SOURCE_DIR}/codigo.txt ${CMAKE_BINARY_DIR}/codigo.txt COPYONLY)
+configure_file(${CMAKE_SOURCE_DIR}/codigo.pm ${CMAKE_BINARY_DIR}/codigo.pm COPYONLY)
 
 include_directories(include)
 
