Fix: address professor's feedback

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,42 +6,37 @@ set(CMAKE_C_STANDARD 11)
 find_package(FLEX REQUIRED)
 find_package(BISON REQUIRED)
 
-# Include directories
 include_directories(include ${CMAKE_CURRENT_BINARY_DIR})
 
-# Bison (parser)
-set(BISON_OUTPUT_FILE ${CMAKE_CURRENT_BINARY_DIR}/parser.c)
-set(BISON_HEADER_FILE ${CMAKE_CURRENT_BINARY_DIR}/parser.h)
+# Define paths for generated files
+set(BISON_OUTPUT_C ${CMAKE_CURRENT_BINARY_DIR}/parser.c)
+set(BISON_OUTPUT_H ${CMAKE_CURRENT_BINARY_DIR}/parser.h)
+set(FLEX_OUTPUT_C ${CMAKE_CURRENT_BINARY_DIR}/scanner.c)
 
+# Custom command for Bison
 add_custom_command(
-    OUTPUT ${BISON_OUTPUT_FILE} ${BISON_HEADER_FILE}
-    COMMAND ${BISON_EXECUTABLE} -o ${BISON_OUTPUT_FILE} --defines=${BISON_HEADER_FILE} -v --report=all ${CMAKE_CURRENT_SOURCE_DIR}/src/parser.y
+    OUTPUT ${BISON_OUTPUT_C} ${BISON_OUTPUT_H}
+    COMMAND ${BISON_EXECUTABLE} -d -o ${BISON_OUTPUT_C} ${CMAKE_CURRENT_SOURCE_DIR}/src/parser.y
     DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/parser.y
     COMMENT "Running Bison on parser.y"
 )
 
-# Flex (scanner)
-set(FLEX_OUTPUT_FILE ${CMAKE_CURRENT_BINARY_DIR}/scanner.c)
+# Custom command for Flex
 add_custom_command(
-    OUTPUT ${FLEX_OUTPUT_FILE}
-    COMMAND ${FLEX_EXECUTABLE} -o ${FLEX_OUTPUT_FILE} ${CMAKE_CURRENT_SOURCE_DIR}/src/scanner.l
-    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/scanner.l ${BISON_HEADER_FILE}
+    OUTPUT ${FLEX_OUTPUT_C}
+    COMMAND ${FLEX_EXECUTABLE} -o ${FLEX_OUTPUT_C} ${CMAKE_CURRENT_SOURCE_DIR}/src/scanner.l
+    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/scanner.l
     COMMENT "Running Flex on scanner.l"
 )
 
-# Add the generated sources to a variable
-set(GENERATED_SOURCES
-    ${FLEX_OUTPUT_FILE}
-    ${BISON_OUTPUT_FILE}
+# Custom target to drive the generation
+add_custom_target(GenerateParserScanner DEPENDS ${BISON_OUTPUT_C} ${BISON_OUTPUT_H} ${FLEX_OUTPUT_C})
+
+# Main executable
+add_executable(main src/main.c src/ast.c src/utils.c
+    ${BISON_OUTPUT_C}
+    ${FLEX_OUTPUT_C}
 )
 
-# Copy the input file
-configure_file(${CMAKE_SOURCE_DIR}/codigo.txt ${CMAKE_BINARY_DIR}/codigo.txt COPYONLY)
-
-# Executable
-add_executable(main
-    src/main.c
-    src/ast.c
-    src/utils.c
-    ${GENERATED_SOURCES}
-)
+# Add dependency to ensure generated files are created before main is built
+add_dependencies(main GenerateParserScanner)
