Add configuration to copy codigo.txt during build process

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,3 +40,5 @@ add_executable(main src/main.c src/ast.c src/utils.c src/symbol_table.c src/sema
 
 # Add dependency to ensure generated files are created before main is built
 add_dependencies(main GenerateParserScanner)
+
+configure_file(${CMAKE_SOURCE_DIR}/codigo.txt ${CMAKE_BINARY_DIR}/codigo.txt COPYONLY)
